name: sec-lib
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Jacob Bisnett
synopsis: TODO
description:
    <https://github.com/JBisnett/sec-lib#readme>
category: TODO
extra-source-files:
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/JBisnett/sec-lib

library
    exposed-modules:
        Producer
        Consumer
        Utils
        Types
        Examples
        TestUtils
        Ops
        Gate
        BigGate
        NotGate
    build-depends:
        base ==4.8.*,
        entropy,
        bytedump,
        bytestring,
        binary,
        cryptonite,
        network,
        vector,
        random,
        array,
        largeword,
        async
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -threaded -Wall -O2 -fno-max-relevant-binds

executable lazy-circuits
    main-is: Executable.hs
    build-depends:
        base -any,
        sec-lib -any,
        network,
        bytestring,
        async
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall -O2 -fwarn-missing-signatures

test-suite sec-lib-test-suite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base -any,
        sec-lib -any,
        tasty -any,
        tasty-hspec -any,
        async,
        network
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -threaded -Wall -O2 -Werror

benchmark sec-lib-benchmark
    type: exitcode-stdio-1.0
    main-is: Benchmark.hs
    build-depends:
        base -any,
        sec-lib -any,
        criterion ==1.1.0.0,
        async,
        network
    default-language: Haskell2010
    hs-source-dirs: benchmark
    ghc-options: -threaded -Wall -Werror
